<resources>
    <string name="app_name">Smart Note Taker</string>
    <string name="etNote_name">Note name</string>
    <string name="etNote_text">Note text</string>
    <string name="tvNotes">Note text</string>
    <string name="btnSave_note">Save Note</string>
    <string name="btnShow_note">Show all notes</string>
    <string name="btnDeleteNote">Delete all notes</string>
    <string name="btnShow_collection">Show all collections</string>
    <string name="btnDeleteCollection">Delete all collections</string>
    <string name="etNote_collection">Note Collection</string>
    <string name="etCollectionName">Collection Name</string>
    <string name="btnSave_collection">Save Collection</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="title_activity_collections_list">CollectionsList</string>
</resources>