<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etNoteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/etNote_name"
                android:layout_margin="10dp"
                />

            <EditText
                android:id="@+id/etNote_text"
                android:hint="@string/etNote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"/>
            <EditText
                android:id="@+id/etNoteCollection"
                android:hint="@string/etNote_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"/>
            <Button
                android:id="@+id/btnSaveNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave_note"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <EditText
                android:id="@+id/etCollectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/etCollectionName"
                android:layout_margin="10dp"
                />
            <Button
                android:id="@+id/btnSaveCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave_collection"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tvNotes"
        android:hint="@string/tvNotes"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        tools:ignore="TextViewEdits"
        android:background="#ff56e3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnShowNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShow_note"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnShowCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShow_collection"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteNote"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnDeleteCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteCollection"
            android:layout_margin="10dp"/>
    </LinearLayout>



</LinearLayout>